--- a/README.rdoc
+++ b/README.rdoc
@@ -20,9 +20,9 @@ Will be updated.
 
 == Inspiration
 
-This project is heavily inspirated by bcarrere/currency-in-words and uses blocks of codes from this repository.
+This project is heavily inspirated by bcarrere/currency-in-words and uses blocks of code from this repository.
 
-Reason for creating my own repository was requirement to use I18n gem for currency to words translation and also for settings.
+Reason for creating my own repository was requirement to use I18n gem for "currency to words" translation and also for settings.
 This means, that this gem can be configured from locale file and translation is not hardcoded to source of library.
 
 == Copyright
