--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = Gem currency_to_words
 
-Provides a view helper for Rails that translate a currency amount to words (eg. <tt>to_words(200)</tt> \=> 'dvě stě').
+Provides a view helper for Rails that translate a currency amount to words (eg. <tt>to_words(200)</tt> \=> 'dvě stě korun').
 
 This helper comes with two supported locales (Czech and Polish) but it is possible and easy to implement your own (see "Implementing a new locale").
 
